[project]
name = "word-grid-finder"
version = "0.1.0"
description = "CLI tool to help play Word Grid"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "dykes>=0.4.0",
]

[dependency-groups]
lint = [
    "ruff>=0.14.10",
]

[project.scripts]
wgfinder = "word_grid_finder.word_grid_finder:main"

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"

#[[tool.uv.index]]
#url = "https://nexus.cloud.aws.tenablesecurity.com/repository/tenable_pypigroup/simple"

#[[tool.uv.index]]
#url = "https://nexus.cloud.aws.tenablesecurity.com//tenable_pypigroup/pypi"


